@@ -9,8 +9,6 @@
     </fileset>
   </path>
 
-  <taskdef name="groovyc" classname="org.codehaus.groovy.ant.Groovyc" classpathref="lib"/>
-
   <target name="compile-main" description="Compile main classes">
     <mkdir dir="target/classes"/>
     <javac srcdir="src/main/java" destdir="target/classes">
@@ -18,17 +16,7 @@
     </javac>
   </target>
 
-  <target name="compile-steps" depends="compile-main" description="Compile test classes">
-    <mkdir dir="target/test-classes"/>
-    <groovyc srcdir="src/test/groovy" destdir="target/test-classes">
-      <classpath refid="lib" />
-      <classpath>
-        <pathelement location="target/classes"/>
-      </classpath>
-    </groovyc>
-  </target>
-
-  <target name="cucumber" depends="compile-steps" description="Run Cucumber">
+  <target name="cucumber" depends="compile-main" description="Run Cucumber">
     <mkdir dir="target/junit-report"/>
 
     <java classname="org.jruby.Main" fork="true" failonerror="true">
@@ -81,6 +69,9 @@
 
   <target name="clean" description="Delete all generated artifacts">
     <delete dir="${basedir}/target"/>
+  </target>
+
+  <target name="clean-deps" description="Delete all dependencies">
     <delete dir="${basedir}/lib/.gem"/>
     <delete>
       <fileset dir="${basedir}/lib" includes=".jar"/>
